// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rhachet-brains-openrouter.unit given: [case1] getBrainAtomsByOpenRouter when: [t0] called then: slugs match snapshot 1`] = `
[
  "openrouter/deepseek/pro",
  "openrouter/deepseek/flash",
  "openrouter/moonshotai/pro",
  "openrouter/z-ai/pro",
  "openrouter/z-ai/flash",
  "openrouter/deepseek/flash/floor&speed=min50tps&privacy=full",
]
`;

exports[`rhachet-brains-openrouter.unit given: [case1] getBrainAtomsByOpenRouter when: [t0] called then: specs match snapshot 1`] = `
[
  {
    "slug": "openrouter/deepseek/pro",
    "spec": BrainSpec {
      "cost": {
        "cash": {
          "cache": {
            "get": "USD 0.000_003_000",
            "set": "USD 0.00",
          },
          "input": "USD 0.000_003_000",
          "output": "USD 0.000_015_000",
          "per": "token",
        },
        "time": {
          "latency": {
            "seconds": 1.5,
          },
          "speed": {
            "per": {
              "seconds": 1,
            },
            "tokens": 50,
          },
        },
      },
      "gain": {
        "cutoff": "2026-10-02",
        "domain": "ALL",
        "grades": {},
        "size": {
          "context": {
            "tokens": 1000000,
          },
        },
        "skills": {
          "tooluse": true,
        },
      },
    },
  },
  {
    "slug": "openrouter/deepseek/flash",
    "spec": BrainSpec {
      "cost": {
        "cash": {
          "cache": {
            "get": "USD 0.000_000_300",
            "set": "USD 0.00",
          },
          "input": "USD 0.000_000_300",
          "output": "USD 0.000_002_000",
          "per": "token",
        },
        "time": {
          "latency": {
            "seconds": 0.6,
          },
          "speed": {
            "per": {
              "seconds": 1,
            },
            "tokens": 50,
          },
        },
      },
      "gain": {
        "cutoff": "2026-10-02",
        "domain": "ALL",
        "grades": {},
        "size": {
          "context": {
            "tokens": 1000000,
          },
        },
        "skills": {
          "tooluse": true,
        },
      },
    },
  },
  {
    "slug": "openrouter/moonshotai/pro",
    "spec": BrainSpec {
      "cost": {
        "cash": {
          "cache": {
            "get": "USD 0.000_003_000",
            "set": "USD 0.00",
          },
          "input": "USD 0.000_003_000",
          "output": "USD 0.000_015_000",
          "per": "token",
        },
        "time": {
          "latency": {
            "seconds": 1.5,
          },
          "speed": {
            "per": {
              "seconds": 1,
            },
            "tokens": 50,
          },
        },
      },
      "gain": {
        "cutoff": "2026-10-02",
        "domain": "ALL",
        "grades": {},
        "size": {
          "context": {
            "tokens": 1000000,
          },
        },
        "skills": {
          "tooluse": true,
        },
      },
    },
  },
  {
    "slug": "openrouter/z-ai/pro",
    "spec": BrainSpec {
      "cost": {
        "cash": {
          "cache": {
            "get": "USD 0.000_003_000",
            "set": "USD 0.00",
          },
          "input": "USD 0.000_003_000",
          "output": "USD 0.000_015_000",
          "per": "token",
        },
        "time": {
          "latency": {
            "seconds": 1.5,
          },
          "speed": {
            "per": {
              "seconds": 1,
            },
            "tokens": 50,
          },
        },
      },
      "gain": {
        "cutoff": "2026-10-02",
        "domain": "ALL",
        "grades": {},
        "size": {
          "context": {
            "tokens": 1000000,
          },
        },
        "skills": {
          "tooluse": true,
        },
      },
    },
  },
  {
    "slug": "openrouter/z-ai/flash",
    "spec": BrainSpec {
      "cost": {
        "cash": {
          "cache": {
            "get": "USD 0.000_000_300",
            "set": "USD 0.00",
          },
          "input": "USD 0.000_000_300",
          "output": "USD 0.000_002_000",
          "per": "token",
        },
        "time": {
          "latency": {
            "seconds": 0.6,
          },
          "speed": {
            "per": {
              "seconds": 1,
            },
            "tokens": 50,
          },
        },
      },
      "gain": {
        "cutoff": "2026-10-02",
        "domain": "ALL",
        "grades": {},
        "size": {
          "context": {
            "tokens": 1000000,
          },
        },
        "skills": {
          "tooluse": true,
        },
      },
    },
  },
  {
    "slug": "openrouter/deepseek/flash/floor&speed=min50tps&privacy=full",
    "spec": BrainSpec {
      "cost": {
        "cash": {
          "cache": {
            "get": "USD 0.000_000_300",
            "set": "USD 0.00",
          },
          "input": "USD 0.000_000_300",
          "output": "USD 0.000_002_000",
          "per": "token",
        },
        "time": {
          "latency": {
            "seconds": 0.6,
          },
          "speed": {
            "per": {
              "seconds": 1,
            },
            "tokens": 50,
          },
        },
      },
      "gain": {
        "cutoff": "2026-10-02",
        "domain": "ALL",
        "grades": {},
        "size": {
          "context": {
            "tokens": 1000000,
          },
        },
        "skills": {
          "tooluse": true,
        },
      },
    },
  },
]
`;

exports[`rhachet-brains-openrouter.unit given: [case2] genBrainAtom factory when: [t0] called with a tier slug then: carries the pro tier estimate, and says so 1`] = `
BrainSpec {
  "cost": {
    "cash": {
      "cache": {
        "get": "USD 0.000_003_000",
        "set": "USD 0.00",
      },
      "input": "USD 0.000_003_000",
      "output": "USD 0.000_015_000",
      "per": "token",
    },
    "time": {
      "latency": {
        "seconds": 1.5,
      },
      "speed": {
        "per": {
          "seconds": 1,
        },
        "tokens": 50,
      },
    },
  },
  "gain": {
    "cutoff": "2026-10-02",
    "domain": "ALL",
    "grades": {},
    "size": {
      "context": {
        "tokens": 1000000,
      },
    },
    "skills": {
      "tooluse": true,
    },
  },
}
`;

exports[`rhachet-brains-openrouter.unit given: [case2] genBrainAtom factory when: [t3] called with an invalid slug then: throws a ConstraintError that names both valid forms 1`] = `
"✋ ConstraintError: 'invalid/slug' names no openrouter model.

name one of these, each with an optional /{filters} segment:
  - a tier:
      openrouter/deepseek/pro
      openrouter/deepseek/flash
      openrouter/moonshotai/pro
      openrouter/z-ai/pro
      openrouter/z-ai/flash
  - any openrouter id: openrouter/{author}/{model}, e.g. openrouter/z-ai/glm-5.3

{
  "slug": "invalid/slug",
  "valid": [
    "openrouter/deepseek/pro",
    "openrouter/deepseek/flash",
    "openrouter/moonshotai/pro",
    "openrouter/z-ai/pro",
    "openrouter/z-ai/flash"
  ]
}"
`;
